--- a/css/style_world_beats.css
+++ b/css/style_world_beats.css
@@ -1,5 +1,5 @@
 /* Main common basic pages */
-#sub-world-beats, #sub-world-beats-from-tribal-beats-to-master-drummers, #sub-world-beats-shake-scrape-and-strike,#sub-world-beats-from-tribal-beats-to-master-drummers-big-noise,#sub-world-beats-from-tribal-beats-to-master-drummers-big-noise, #sub-world-beats-from-tribal-beats-to-master-drummers-master-drummers,#sub-world-beats-from-tribal-beats-to-master-drummers-tribal-beats,#sub-world-beats-shake-scrape-and-strike-creating-the-beat,#sub-world-beats-shake-scrape-and-strike-the-rolllll-of-drumming{
+#sub-world-beats, #sub-world-beats-from-tribal-beats-to-master-drummers, #sub-world-beats-shake-scrape-and-strike,#sub-world-beats-from-tribal-beats-to-master-drummers-big-noise,#sub-world-beats-from-tribal-beats-to-master-drummers-big-noise, #sub-world-beats-from-tribal-beats-to-master-drummers-master-drummers,#sub-world-beats-from-tribal-beats-to-master-drummers-tribal-beats,#sub-world-beats-shake-scrape-and-strike-creating-the-beat,#sub-world-beats-shake-scrape-and-strike-the-rolllll-of-drumming, #sub-world-beats-weird-and-wonderful-beatmakers-beatboxing, #sub-world-beats-weird-and-wonderful-beatmakers-gongs, #sub-world-beats-weird-and-wonderful-beatmakers-lion-drums, #sub-world-beats-weird-and-wonderful-beatmakers-taiko, #sub-world-beats-weird-and-wonderful-beatmakers-talking-drums{
   background:url('images/9-12/Art_and_Music/World_Beats/World_Beats_BG.jpg') no-repeat;
   height:748px !important;
   overflow:hidden !important;
@@ -29,6 +29,19 @@
 
 #sub-world-beats-from-tribal-beats-to-master-drummers-master-drummers-the-tonbak{
   background:url('images/9-12/Art_and_Music/World_Beats/From_Tribal_Beats_to_Master_Drummers/Master_Drummers/The_Tonbak/Tonbak_BG.png') no-repeat;
+  height:748px !important;
+  overflow:hidden !important;
+  width:1024px !important;
+}
+
+#sub-world-beats-weird-and-wonderful-beatmakers{
+  background:url('images/9-12/Art_and_Music/World_Beats/Weird_And_Wonderful_Beatmakers/Weird_And_Wonderful_Beatmakers_BG.png') no-repeat;
+  height:748px !important;
+  overflow:hidden !important;
+  width:1024px !important;
+}
+#sub-world-beats-from-tribal-beats-to-master-drummers-tribal-beats-west-african-tribal-drumming{
+  background:url('images/9-12/Art_and_Music/World_Beats/From_Tribal_Beats_to_Master_Drummers/Tribal_Beats/West_African_Tribal_Drumming/West_African_Tribal_Drumming_BG.jpg') no-repeat;
   height:748px !important;
   overflow:hidden !important;
   width:1024px !important;
@@ -173,7 +186,7 @@
 
 
 /* Common Header Div Design */
-#sub-world-beats .bptitleholder, #sub-world-beats-from-tribal-beats-to-master-drummers .bptitleholder, #sub-world-beats-shake-scrape-and-strike .bptitleholder, #sub-world-beats-from-tribal-beats-to-master-drummers-big-noise .bptitleholder, #sub-world-beats-from-tribal-beats-to-master-drummers-master-drummers .bptitleholder,#sub-world-beats-from-tribal-beats-to-master-drummers-tribal-beats .bptitleholder,#sub-world-beats-shake-scrape-and-strike-creating-the-beat .bptitleholder,#sub-world-beats-shake-scrape-and-strike-the-rolllll-of-drumming .bptitleholder{
+#sub-world-beats .bptitleholder, #sub-world-beats-from-tribal-beats-to-master-drummers .bptitleholder, #sub-world-beats-shake-scrape-and-strike .bptitleholder, #sub-world-beats-from-tribal-beats-to-master-drummers-big-noise .bptitleholder, #sub-world-beats-from-tribal-beats-to-master-drummers-master-drummers .bptitleholder,#sub-world-beats-from-tribal-beats-to-master-drummers-tribal-beats .bptitleholder,#sub-world-beats-shake-scrape-and-strike-creating-the-beat .bptitleholder,#sub-world-beats-shake-scrape-and-strike-the-rolllll-of-drumming .bptitleholder, #sub-world-beats-weird-and-wonderful-beatmakers-beatboxing .bptitleholder, #sub-world-beats-weird-and-wonderful-beatmakers-gongs .bptitleholder, #sub-world-beats-weird-and-wonderful-beatmakers-lion-drums .bptitleholder, #sub-world-beats-weird-and-wonderful-beatmakers-taiko .bptitleholder, #sub-world-beats-weird-and-wonderful-beatmakers-talking-drums .bptitleholder{
 	width: 627px;
 	height: 68px;
 	text-align: center;
@@ -232,8 +245,28 @@
 	left: 306px;
 }
 
+#sub-world-beats-weird-and-wonderful-beatmakers .bptitleholder{
+	width: 391px;
+	height: 68px;
+	text-align: center;
+	line-height: 28px;
+	position: absolute;
+	top: 52px;
+	left: 306px;
+}
+
+#sub-world-beats-from-tribal-beats-to-master-drummers-tribal-beats-west-african-tribal-drumming .bptitleholder{
+	width: 654px;
+	height: 68px;
+	text-align: center;
+	line-height: 28px;
+	position: absolute;
+	top: 52px;
+	left: 184px;
+}
+
 /* Common Header Design h1 */
-#sub-world-beats .bptitleholder h1,#sub-world-beats-from-tribal-beats-to-master-drummers .bptitleholder h1, #sub-world-beats-shake-scrape-and-strike .bptitleholder h1, #sub-world-beats-from-tribal-beats-to-master-drummers-big-noise .bptitleholder h1, #sub-world-beats-from-tribal-beats-to-master-drummers-master-drummers .bptitleholder h1,#sub-world-beats-from-tribal-beats-to-master-drummers-tribal-beats .bptitleholder h1,#sub-world-beats-shake-scrape-and-strike-creating-the-beat .bptitleholder h1,#sub-world-beats-shake-scrape-and-strike-the-rolllll-of-drumming .bptitleholder h1{
+#sub-world-beats .bptitleholder h1,#sub-world-beats-from-tribal-beats-to-master-drummers .bptitleholder h1, #sub-world-beats-shake-scrape-and-strike .bptitleholder h1, #sub-world-beats-from-tribal-beats-to-master-drummers-big-noise .bptitleholder h1, #sub-world-beats-from-tribal-beats-to-master-drummers-master-drummers .bptitleholder h1,#sub-world-beats-from-tribal-beats-to-master-drummers-tribal-beats .bptitleholder h1,#sub-world-beats-shake-scrape-and-strike-creating-the-beat .bptitleholder h1,#sub-world-beats-shake-scrape-and-strike-the-rolllll-of-drumming .bptitleholder h1, #sub-world-beats-weird-and-wonderful-beatmakers-beatboxing .bptitleholder h1, #sub-world-beats-weird-and-wonderful-beatmakers-lion-drums .bptitleholder h1, #sub-world-beats-weird-and-wonderful-beatmakers-taiko .bptitleholder h1, #sub-world-beats-weird-and-wonderful-beatmakers-talking-drums .bptitleholder h1{
 	text-transform: uppercase;
 	color: #FFFFFF !important;
 	font-family: "comic sans ms" !important;
@@ -243,7 +276,7 @@
 }
 
 /* Custom Page Header Design h1 */
-#sub-jammin-jammin-in-the-style-of-classical .bptitleholder h1, #sub-world-beats-from-tribal-beats-to-master-drummers-big-noise-indonesian-gamelan .bptitleholder h1, #sub-world-beats-from-tribal-beats-to-master-drummers-electro-beats .bptitleholder h1, #sub-world-beats-from-tribal-beats-to-master-drummers-master-drummers-the-tabla .bptitleholder h1, #sub-world-beats-from-tribal-beats-to-master-drummers-master-drummers-the-tonbak .bptitleholder h1{
+#sub-jammin-jammin-in-the-style-of-classical .bptitleholder h1, #sub-world-beats-from-tribal-beats-to-master-drummers-big-noise-indonesian-gamelan .bptitleholder h1, #sub-world-beats-from-tribal-beats-to-master-drummers-electro-beats .bptitleholder h1, #sub-world-beats-from-tribal-beats-to-master-drummers-master-drummers-the-tabla .bptitleholder h1, #sub-world-beats-from-tribal-beats-to-master-drummers-master-drummers-the-tonbak .bptitleholder h1,#sub-world-beats-weird-and-wonderful-beatmakers .bptitleholder h1, #sub-world-beats-weird-and-wonderful-beatmakers-gongs .bptitleholder h1{
 	text-transform: uppercase;
 	color: #FFFFFF !important;
 	font-family: "comic sans ms" !important;
@@ -251,7 +284,15 @@
 	padding: 0;
 	margin: 0;	
 }
-
+#sub-world-beats-from-tribal-beats-to-master-drummers-tribal-beats-west-african-tribal-drumming .bptitleholder h1{
+	text-transform: uppercase;
+	color: #FFFFFF !important;
+	font-family: "comic sans ms" !important;
+	font-weight: bold;
+	padding: 0;
+	margin: 0;
+	font-size: 30px;	
+}
 .bpcontentWorldBeats{
 	color: #000000;
     font-family: "comic sans ms";
@@ -338,6 +379,34 @@
 	color: #FFFFFF;
 }
 
+.navWorldBeats-westafricantribaldrumming{
+	position: absolute;
+	left: 344px;
+	top: 120px;
+	width: 392px;
+	height: 392px;
+	overflow: auto;
+	text-align: center;
+	font-family: comic sans ms;
+	font-size: 18px;
+	font-weight: normal;
+	color: #FFFFFF;
+}
+
+.navWorldBeats-WeiredAndWonderfulBeatmakers{
+	position: absolute;
+	left: 83px;
+	top: 171px;
+	width: 853px;
+	height: 392px;
+	overflow: auto;
+	text-align: center;
+	font-family: comic sans ms;
+	font-size: 18px;
+	font-weight: normal;
+	color: #FFFFFF;
+}
+
 
 #indo_play_vid{
 	height: 50px;
@@ -361,6 +430,14 @@
 	left: 446px;
 }
 
+#tribal_drumming_video_btn{
+	height: 62px;
+	width: 117px;
+	position: absolute;
+	top: 620px;
+	left: 446px;
+}
+
 #tonbak_video_btn{
 	height: 62px;
 	width: 117px;
@@ -368,3 +445,38 @@
 	top: 620px;
 	left: 446px;
 }
+		.drum_talk_btn{
+			position: absolute;
+			height: 150px;
+			width: 142px;
+			top: 324px;
+			left: 56px;
+		}
+		.how_huge_btn{
+			position: absolute;
+			height: 147px;
+			width: 148px;
+			top: 439px;
+			left: 263px;
+		}
+		.liondance_btn{
+			position: absolute;
+			height: 147px;
+			width: 148px;
+			top: 328px;
+			left: 419px;	
+		}
+		.hear_the_world_btn{
+			position: absolute;
+			height: 142px;
+			width: 137px;
+			top: 443px;
+			left: 637px;
+		}
+		.drums_with_your_voice_btn{
+			position: absolute;
+			height: 147px;
+			width: 145px;
+			top: 327px;
+			left: 790px;
+		}
