--- a/css/style_how_to_write_a_song.css
+++ b/css/style_how_to_write_a_song.css
@@ -1,5 +1,5 @@
 /* Main common basic pages */
-#sub-how-to-write-a-song, #sub-how-to-write-a-song-what-is-a-song, #sub-how-to-write-a-song-putting-a-song-together-choosing-a-style, #sub-how-to-write-a-song-putting-a-song-together-finding-the-form-and-order, #sub-how-to-write-a-song-putting-a-song-together-making-lyrics-into-melodies, #sub-how-to-write-a-song-putting-a-song-together-where-to-start, #sub-how-to-write-a-song-putting-a-song-together-writing-lyrics, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-lyrics, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-beat, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-melody, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-melody, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-chords{
+#sub-how-to-write-a-song, #sub-how-to-write-a-song-what-is-a-song, #sub-how-to-write-a-song-putting-a-song-together-choosing-a-style, #sub-how-to-write-a-song-putting-a-song-together-finding-the-form-and-order, #sub-how-to-write-a-song-putting-a-song-together-making-lyrics-into-melodies, #sub-how-to-write-a-song-putting-a-song-together-where-to-start, #sub-how-to-write-a-song-putting-a-song-together-writing-lyrics, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-lyrics, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-beat, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-melody, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-melody, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-chords, #sub-how-to-write-a-song-what-is-a-song-what-do-songs-do{
   background:url('images/9-12/Art_and_Music/How_To_Write_A_Song/How_To_Write_A_Song_BG.jpg') no-repeat;
   height:748px !important;
   overflow:hidden !important;
@@ -86,6 +86,13 @@
 }
 #sub-how-to-write-a-song-song-style-showcase-rock{
   background:url('images/9-12/Art_and_Music/How_To_Write_A_Song/Song_Styles_Showcase/Rock/Rock_BG.png') no-repeat;
+  height:748px !important;
+  overflow:hidden !important;
+  width:1024px !important;
+}
+
+#sub-how-to-write-a-song-what-is-a-song-a-journey-through-a-song{
+  background:url('images/9-12/Art_and_Music/How_To_Write_A_Song/What_Is_A_Song/A_Journey_Through_A_Song/A_Journey_Through_A_Song_BG.png') no-repeat;
   height:748px !important;
   overflow:hidden !important;
   width:1024px !important;
@@ -238,7 +245,7 @@
 }
 
 /* Common Header Div Design */
-#sub-how-to-write-a-song .bptitleholder, #sub-how-to-write-a-song-what-is-a-song .bptitleholder, #sub-how-to-write-a-song-putting-a-song-together-choosing-a-style .bptitleholder, #sub-how-to-write-a-song-putting-a-song-together-finding-the-form-and-order .bptitleholder, #sub-how-to-write-a-song-putting-a-song-together-making-lyrics-into-melodies .bptitleholder, #sub-how-to-write-a-song-putting-a-song-together-where-to-start .bptitleholder, #sub-how-to-write-a-song-putting-a-song-together-writing-lyrics .bptitleholder, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-lyrics .bptitleholder, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-beat .bptitleholder, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-melody .bptitleholder, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-melody .bptitleholder, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-chords .bptitleholder{
+#sub-how-to-write-a-song .bptitleholder, #sub-how-to-write-a-song-what-is-a-song .bptitleholder, #sub-how-to-write-a-song-putting-a-song-together-choosing-a-style .bptitleholder, #sub-how-to-write-a-song-putting-a-song-together-finding-the-form-and-order .bptitleholder, #sub-how-to-write-a-song-putting-a-song-together-making-lyrics-into-melodies .bptitleholder, #sub-how-to-write-a-song-putting-a-song-together-where-to-start .bptitleholder, #sub-how-to-write-a-song-putting-a-song-together-writing-lyrics .bptitleholder, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-lyrics .bptitleholder, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-beat .bptitleholder, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-melody .bptitleholder, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-melody .bptitleholder, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-chords .bptitleholder, #sub-how-to-write-a-song-what-is-a-song-what-do-songs-do .bptitleholder{
 	width: 627px;
 	height: 68px;
 	text-align: center;
@@ -268,7 +275,7 @@
 	left: 194px;
 }
 /* Common Header Design h1 */
-#sub-how-to-write-a-song .bptitleholder h1, #sub-how-to-write-a-song-what-is-a-song .bptitleholder h1, #sub-how-to-write-a-song-putting-a-song-together-choosing-a-style .bptitleholder h1, #sub-how-to-write-a-song-putting-a-song-together-finding-the-form-and-order .bptitleholder h1, #sub-how-to-write-a-song-putting-a-song-together-making-lyrics-into-melodies .bptitleholder h1, #sub-how-to-write-a-song-putting-a-song-together-where-to-start .bptitleholder h1, #sub-how-to-write-a-song-putting-a-song-together-writing-lyrics .bptitleholder h1, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-lyrics .bptitleholder h1, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-beat .bptitleholder h1, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-melody .bptitleholder h1, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-melody .bptitleholder h1, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-chords .bptitleholder h1{
+#sub-how-to-write-a-song .bptitleholder h1, #sub-how-to-write-a-song-what-is-a-song .bptitleholder h1, #sub-how-to-write-a-song-putting-a-song-together-choosing-a-style .bptitleholder h1, #sub-how-to-write-a-song-putting-a-song-together-finding-the-form-and-order .bptitleholder h1, #sub-how-to-write-a-song-putting-a-song-together-making-lyrics-into-melodies .bptitleholder h1, #sub-how-to-write-a-song-putting-a-song-together-where-to-start .bptitleholder h1, #sub-how-to-write-a-song-putting-a-song-together-writing-lyrics .bptitleholder h1, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-lyrics .bptitleholder h1, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-beat .bptitleholder h1, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-melody .bptitleholder h1, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-melody .bptitleholder h1, #sub-how-to-write-a-song-what-is-a-song-ingredients-of-a-song-chords .bptitleholder h1, #sub-how-to-write-a-song-what-is-a-song-what-do-songs-do .bptitleholder h1{
 	text-transform: uppercase;
 	color: #FFFFFF !important;
 	font-family: "comic sans ms" !important;
