--- a/css/style_awesome_art.css
+++ b/css/style_awesome_art.css
@@ -1,14 +1,56 @@
 /* Main common basic pages */
-#sub-art-today{
-  background:url('images/9-12/Art_and_Music/Art_Today/Art_Today_BG.png') no-repeat;
+#sub-awesome-art, #sub-awesome-art-beyond-the-frame, #sub-awesome-art-different-views-of-art, #sub-awesome-art-what-is-art, #sub-awesome-art-what-is-art-we-see-what-we-want-to-see, #sub-awesome-art-beyond-the-frame-spiral-jetty, #sub-awesome-art-what-is-art-cave-paintings, #sub-awesome-art-what-is-art-we-see-what-we-want-to-see-lets-draw-your-bedroom, #sub-awesome-art-what-is-art-we-see-what-we-want-to-see-art-and-science, #sub-awesome-art-different-views-of-art-the-Song-Dynasty, #sub-awesome-art-different-views-of-art-Cubism-and-the-Fourth-Dimension, #sub-awesome-art-different-views-of-art-Australian-indigenous-painting{
+  background:url('images/9-12/Art_and_Music/Awesome_Art/Awesome_Art_Bg.jpg') no-repeat;
   height:748px !important;
   overflow:hidden !important;
   width:1024px !important;
 }
 
 /* Custom Pages Style */
-#sub-art-today-investigating-our-world{
-  background:url('images/9-12/Art_and_Music/Art_Today/Investigating_Our_World/Investigating_Our_World_BG.png') no-repeat;
+#sub-awesome-art-looking-at-art{
+  background:url('images/9-12/Art_and_Music/Awesome_Art/Looking_At_Art/Looking_At_Art_BG.png') no-repeat;
+  height:748px !important;
+  overflow:hidden !important;
+  width:1024px !important;
+}
+
+#sub-awesome-art-beyond-the-frame-cloud-gate{
+  background:url('images/9-12/Art_and_Music/Awesome_Art/Beyond_The_Frame/Cloud_Gate/Clous_Gate_BG.png') no-repeat;
+  height:748px !important;
+  overflow:hidden !important;
+  width:1024px !important;
+}
+
+#sub-awesome-art-beyond-the-frame-house{
+  background:url('images/9-12/Art_and_Music/Awesome_Art/Beyond_The_Frame/House/House_BG.jpg') no-repeat;
+  height:748px !important;
+  overflow:hidden !important;
+  width:1024px !important;
+}
+
+#sub-awesome-art-looking-at-art-forms{
+  background:url('images/9-12/Art_and_Music/Awesome_Art/Looking_At_Art/Art_Forms/Positional.jpg') no-repeat;
+  height:748px !important;
+  overflow:hidden !important;
+  width:1024px !important;
+}
+
+#sub-awesome-art-looking-at-art-ideas{
+  background:url('images/9-12/Art_and_Music/Awesome_Art/Looking_At_Art/Art_Ideas/position.jpg') no-repeat;
+  height:748px !important;
+  overflow:hidden !important;
+  width:1024px !important;
+}
+
+#sub-awesome-art-what-is-art-we-see-what-we-want-to-see-Holbein-The-Ambassadors{
+  background:url('images/9-12/Art_and_Music/Awesome_Art/What_Is_Art/We_See_What_We_Want_To_See/Holbiens/Holbeins_BG.png') no-repeat;
+  height:748px !important;
+  overflow:hidden !important;
+  width:1024px !important;
+}
+
+#sub-awesome-art-different-views-of-art-Renaissance-Art{
+  background:url('images/9-12/Art_and_Music/Awesome_Art/Different_Views_Of_The_World/Renaissance/Renaissance_Bg.png') no-repeat;
   height:748px !important;
   overflow:hidden !important;
   width:1024px !important;
@@ -118,7 +160,6 @@
     position: absolute;
     top: 405px;
 }
-
 			
 /**********flipcard effect**************/
 #f3_container,#f4_container,#f5_container  {
@@ -174,10 +215,9 @@
   color:#000000;
 }
 
-
 /* Custom content */
 
-.navAwesomeArt-InvestigateOurWorld{
+.navAwesomeArt-LookingAtArt{
 	position: absolute;
 	left: 195px;
 	top: 96px;
@@ -191,9 +231,79 @@
 	color: #ffffff;
 }
 
+.navAwesomeArt-CloudGate{
+	position: absolute;
+	left: 95px;
+	top: 74px;
+	width: 850px;
+	height: 199px;
+	overflow: auto;
+	text-align: center;
+	font-family: comic sans ms;
+	font-size: 18px;
+	font-weight: normal;
+	color: #000000;
+}
+
+.navAwesomeArt-House{
+	position: absolute;
+	left: 95px;
+	top: 80px;
+	width: 850px;
+	height: 231px;
+	overflow: auto;
+	text-align: center;
+	font-family: comic sans ms;
+	font-size: 18px;
+	font-weight: normal;
+	color: #ffffff;
+}
+
+.navAwesomeArt-ArtIdeas{
+	position: absolute;
+	left: 95px;
+	top: 80px;
+	width: 850px;
+	height: 231px;
+	overflow: auto;
+	text-align: center;
+	font-family: comic sans ms;
+	font-size: 18px;
+	font-weight: normal;
+	color: #ffffff;
+}
+
+.navAwesomeArt-HolbeinAmbassadors{
+	position: absolute;
+	left: 35px;
+	top: 100px;
+	width: 345px;
+	height: 515px;
+	overflow: auto;
+	text-align: left;
+	font-family: comic sans ms;
+	font-size: 18px;
+	font-weight: normal;
+	color: #ffffff;
+}
+
+.navAwesomeArt-RenaissanceArt{
+	position: absolute;
+	left: 35px;
+	top: 80px;
+	width: 345px;
+	height: 443px;
+	overflow: auto;
+	text-align: left;
+	font-family: comic sans ms;
+	font-size: 18px;
+	font-weight: normal;
+	color: #ffffff;
+}
+
 /* Common Header Div Design */
 
-#sub-art-today .bptitleholder{
+#sub-awesome-art .bptitleholder, #sub-awesome-art-beyond-the-frame .bptitleholder, #sub-awesome-art-what-is-art .bptitleholder, #sub-awesome-art-what-is-art-we-see-what-we-want-to-see .bptitleholder, #sub-awesome-art-what-is-art-cave-paintings .bptitleholder, #sub-awesome-art-what-is-art-we-see-what-we-want-to-see-lets-draw-your-bedroom .bptitleholder, #sub-awesome-art-what-is-art-we-see-what-we-want-to-see-art-and-science .bptitleholder, #sub-awesome-art-different-views-of-art-the-Song-Dynasty .bptitleholder{
 	width: 627px;
 	height: 68px;
 	text-align: center;
@@ -203,9 +313,19 @@
 	left: 194px;
 }
 
+#sub-awesome-art-different-views-of-art .bptitleholder, #sub-awesome-art-different-views-of-art-Cubism-and-the-Fourth-Dimension .bptitleholder, #sub-awesome-art-beyond-the-frame-spiral-jetty .bptitleholder, #sub-awesome-art-different-views-of-art-Australian-indigenous-painting .bptitleholder{
+	width: 627px;
+	height: 68px;
+	text-align: center;
+	line-height: 35px;
+	position: absolute;
+	top: 160px;
+	left: 194px;
+}
+
 /* Custom Header Div Design */
 
-#sub-art-today-investigating-our-world .bptitleholder{
+#sub-awesome-art-looking-at-art .bptitleholder{
 	width: 550px;
 	height: 68px;
 	text-align: center;
@@ -215,9 +335,69 @@
 	left: 220px;
 }
 
+#sub-awesome-art-beyond-the-frame-cloud-gate .bptitleholder{
+	width: 615px;
+	height: 44px;
+	text-align: center;
+	line-height: 28px;
+	position: absolute;
+	top: 22px;
+	left: 205px;
+}
+
+#sub-awesome-art-beyond-the-frame-house .bptitleholder{
+	width: 615px;
+	height: 44px;
+	text-align: center;
+	line-height: 28px;
+	position: absolute;
+	top: 22px;
+	left: 205px;
+}
+
+#sub-awesome-art-looking-at-art-forms .bptitleholder{
+	width: 615px;
+	height: 44px;
+	text-align: center;
+	line-height: 28px;
+	position: absolute;
+	top: 22px;
+	left: 205px;
+}
+
+#sub-awesome-art-looking-at-art-ideas .bptitleholder{
+	width: 615px;
+	height: 44px;
+	text-align: center;
+	line-height: 28px;
+	position: absolute;
+	top: 22px;
+	left: 205px;
+}
+
+#sub-awesome-art-what-is-art-we-see-what-we-want-to-see-Holbein-The-Ambassadors .bptitleholder{
+	width: 345px;
+	height: 44px;
+	text-align: center;
+	line-height: 33px;
+	position: absolute;
+	top: 10px;
+	left: 20px;
+}
+
+#sub-awesome-art-different-views-of-art-Renaissance-Art .bptitleholder{
+	width: 345px;
+	height: 44px;
+	text-align: center;
+	line-height: 33px;
+	position: absolute;
+	top: 10px;
+	left: 20px;
+}
+
 /* Common Header Design h1 */
 
-#sub-art-today .bptitleholder h1{
+#sub-awesome-art .bptitleholder h1, #sub-awesome-art-beyond-the-frame .bptitleholder h1, #sub-awesome-art-different-views-of-art .bptitleholder h1, #sub-awesome-art-what-is-art .bptitleholder h1, #sub-awesome-art-what-is-art-we-see-what-we-want-to-see .bptitleholder h1, #sub-awesome-art-beyond-the-frame-spiral-jetty .bptitleholder h1, #sub-awesome-art-what-is-art-cave-paintings .bptitleholder h1, #sub-awesome-art-what-is-art-we-see-what-we-want-to-see-lets-draw-your-bedroom .bptitleholder h1, #sub-awesome-art-what-is-art-we-see-what-we-want-to-see-art-and-science .bptitleholder h1, #sub-awesome-art-different-views-of-art-the-Song-Dynasty .bptitleholder h1, #sub-awesome-art-different-views-of-art-Cubism-and-the-Fourth-Dimension .bptitleholder h1, #sub-awesome-art-different-views-of-art-Australian-indigenous-painting .bptitleholder h1{
 	text-transform: uppercase;
 	color: #FFFFFF !important;
 	font-family: "comic sans ms" !important;
@@ -228,11 +408,67 @@
 
 /* Custom Page Header Design h1 */
 
-#sub-art-today-investigating-our-world .bptitleholder h1{
+#sub-awesome-art-looking-at-art .bptitleholder h1{
 	text-transform: uppercase;
 	color: #FFFFFF !important;
 	font-family: "comic sans ms" !important;
 	font-weight: bold;
 	padding: 0;
 	margin: 0;	
+}
+
+#sub-awesome-art-beyond-the-frame-cloud-gate .bptitleholder h1{
+	text-transform: uppercase;
+	color: #000000 !important;
+	font-family: "comic sans ms" !important;
+	font-weight: bold;
+	padding: 0;
+	margin: 0;	
+}
+
+#sub-awesome-art-beyond-the-frame-house .bptitleholder h1{
+	text-transform: uppercase;
+	color: #ffffff !important;
+	font-family: "comic sans ms" !important;
+	font-weight: bold;
+	padding: 0;
+	margin: 0;	
+}
+
+#sub-awesome-art-looking-at-art-forms .bptitleholder h1{
+	text-transform: uppercase;
+	color: #ffffff !important;
+	font-family: "comic sans ms" !important;
+	font-weight: bold;
+	padding: 0;
+	margin: 0;	
+}
+
+#sub-awesome-art-looking-at-art-ideas .bptitleholder h1{
+	text-transform: uppercase;
+	color: #ffffff !important;
+	font-family: "comic sans ms" !important;
+	font-weight: bold;
+	padding: 0;
+	margin: 0;	
+}
+
+#sub-awesome-art-what-is-art-we-see-what-we-want-to-see-Holbein-The-Ambassadors .bptitleholder h1{
+	text-transform: uppercase;
+	color: #ffffff !important;
+	font-family: "comic sans ms" !important;
+	font-weight: bold;
+	padding: 0;
+	margin: 0;
+	font-size: 28px;	
+}
+
+#sub-awesome-art-different-views-of-art-Renaissance-Art .bptitleholder h1{
+	text-transform: uppercase;
+	color: #ffffff !important;
+	font-family: "comic sans ms" !important;
+	font-weight: bold;
+	padding: 0;
+	margin: 0;
+	font-size: 28px;	
 }
