--- a/css/style_awesome_art.css
+++ b/css/style_awesome_art.css
@@ -43,7 +43,7 @@
 }
 
 #sub-awesome-art-what-is-art-we-see-what-we-want-to-see-Holbein-The-Ambassadors{
-  background:url('images/9-12/Art_and_Music/Awesome_Art/What_Is_Art/We_See_What_We_Want_To_See/Holbiens/Holbeins_BG.png') no-repeat;
+  background:url('images/9-12/Art_and_Music/Awesome_Art/What_Is_Art/We_See_What_We_Want_To_See/Holbiens/Holbeins_BG_New.png') no-repeat;
   height:748px !important;
   overflow:hidden !important;
   width:1024px !important;
@@ -278,7 +278,7 @@
 	left: 35px;
 	top: 100px;
 	width: 345px;
-	height: 515px;
+	height: 487px;
 	overflow: auto;
 	text-align: left;
 	font-family: comic sans ms;
@@ -471,4 +471,68 @@
 	padding: 0;
 	margin: 0;
 	font-size: 28px;	
+}
+
+.tools_bx{
+	background: url('images/9-12/Art_and_Music/Awesome_Art/What_Is_Art/We_See_What_We_Want_To_See/Holbiens/Tools.png') no-repeat;
+	width: 760px;
+	height: 160px;
+	position: absolute;
+	top: 598px;
+	left: 145px;
+	z-index: 10;
+}
+.rotate_btn{
+	position: absolute;
+	width: 78px;
+	height: 77px;
+	left: 415px;
+	top: 622px;
+	z-index: 20;
+}
+#sub-awesome-art-what-is-art-we-see-what-we-want-to-see-Holbein-The-Ambassadors .botlogoholder {
+	width: 221px;
+	height: 82px;
+	position: absolute;
+	left: 398px;
+	top: 684px;
+	text-align: center;
+	z-index: 15;
+}
+
+.holbein_image1{
+	background: url('images/9-12/Art_and_Music/Awesome_Art/What_Is_Art/We_See_What_We_Want_To_See/Holbiens/Holbeins_image1.png') no-repeat;
+	width: 579px;
+	height: 571px;
+	top: 98px;
+	left: 410px;
+	position: absolute;
+}
+
+.holbein_image2{
+	background: url('images/9-12/Art_and_Music/Awesome_Art/What_Is_Art/We_See_What_We_Want_To_See/Holbiens/Holbeins_image2.png') no-repeat 99px 2px;
+	width: 359px;
+	height: 769px;
+	top: 0px;
+	left: 480px;
+	position: absolute;
+	display:none;
+}
+
+.holbein_image3{
+	background: url('images/9-12/Art_and_Music/Awesome_Art/What_Is_Art/We_See_What_We_Want_To_See/Holbiens/Holbeins_image3.png') no-repeat;
+	width: 124px;
+	height: 767px;
+	top: 36px;
+	left: 630px;
+	position: absolute;
+	display:none;
+}
+
+.magnify_btn{
+	position: absolute;
+	width: 155px;
+	height: 70px;
+	top: 625px;
+	left: 590px;
 }
