--- a/css/style_art_today.css
+++ b/css/style_art_today.css
@@ -369,3 +369,54 @@
 	padding: 0;
 	margin: 0;
 }
+
+#artandperceptionlink{
+	position:absolute;
+	left: 460px;
+	top: 492px;
+	width: 108px;
+	height: 143px;
+}
+
+#artandperceptionlink:hover{
+	background:url('images/9-12/Art_and_Music/Art_Today/Involving_The_Audience/active_thumbmark.png') no-repeat;	
+	position: absolute;
+	left: 476px;
+	top: 494px;
+	width: 108px;
+	height: 143px;
+}
+
+#performanceartlink{
+	position:absolute;
+	left: 105px;
+	top: 490px;
+	width: 103px;
+	height: 148px;
+}
+
+#performanceartlink:hover{
+	background:url('images/9-12/Art_and_Music/Art_Today/Involving_The_Audience/active_thumbmark.png') no-repeat;	
+	position: absolute;
+	left: 121px;
+	top: 494px;
+	width: 103px;
+	height: 148px;
+}
+
+#thesocialturnlink{
+	position:absolute;
+	left: 808px;
+	top: 493px;
+	width: 100px;
+	height: 143px;
+}
+
+#thesocialturnlink:hover{
+	background:url('images/9-12/Art_and_Music/Art_Today/Involving_The_Audience/active_thumbmark.png') no-repeat;	
+	position: absolute;
+	left: 821px;
+	top: 494px;
+	width: 100px;
+	height: 143px;
+}
