--- a/css/style_art_today.css
+++ b/css/style_art_today.css
@@ -22,7 +22,7 @@
 }
 
 #sub-art-today-involving-the-audience-art-and-perception{
-  background:url('images/9-12/Art_and_Music/Art_Today/Involving_The_Audience/Art_And_Perception/Art_And_Perception_Bg.png') no-repeat;
+  background:url('images/9-12/Art_and_Music/Art_Today/Involving_The_Audience/Art_And_Perception/Art_And_Perception_Bg_new.png') no-repeat;
   height:748px !important;
   overflow:hidden !important;
   width:1024px !important;
@@ -419,4 +419,88 @@
 	top: 494px;
 	width: 100px;
 	height: 143px;
+}
+
+#clickSilhouettes_First{
+	position: absolute;
+	left: 257px;
+	top: 540px;
+	width: 95px;
+	height: 143px;
+}
+
+#clickSilhouettes_First:hover{
+	background:url('images/9-12/Art_and_Music/Art_Today/Involving_The_Audience/Art_And_Perception/active_thumbmark.png') no-repeat;	
+	position: absolute;
+	left: 267px;
+	top: 554px;
+	width: 75px;
+	height: 120px;	
+}
+
+#clickSilhouettes_Second{
+	position: absolute;
+	left: 357px;
+	top: 550px;
+	width: 95px;
+	height: 143px;
+}
+
+#clickSilhouettes_Second:hover{
+	background:url('images/9-12/Art_and_Music/Art_Today/Involving_The_Audience/Art_And_Perception/active_thumbmark.png') no-repeat;	
+	position: absolute;
+	left: 366px;
+	top: 568px;
+	width: 75px;
+	height: 120px;
+}
+
+#clickSilhouettes_Third{
+	position: absolute;
+	left: 508px;
+	top: 545px;
+	width: 95px;
+	height: 135px;	
+}
+
+#clickSilhouettes_Third:hover{
+	background:url('images/9-12/Art_and_Music/Art_Today/Involving_The_Audience/Art_And_Perception/active_thumbmark.png') no-repeat;	
+	position: absolute;
+	left: 516px;
+	top: 560px;
+	width: 75px;
+	height: 120px;
+}
+
+#Silhouettes_First{
+	background:url('images/9-12/Art_and_Music/Art_Today/Involving_The_Audience/Art_And_Perception/Lightbox1.png') no-repeat;
+	width:100%;
+	height:100%;
+	top:0px;
+	left:0px;
+	position:absolute;
+	display:none;
+	z-index:15;
+}
+
+#Silhouettes_Second{
+	background:url('images/9-12/Art_and_Music/Art_Today/Involving_The_Audience/Art_And_Perception/Lightbox2.png') no-repeat;
+	width:100%;
+	height:100%;
+	top:0px;
+	left:0px;
+	position:absolute;
+	display:none;
+	z-index:15;
+}
+
+#Silhouettes_Third{
+	background:url('images/9-12/Art_and_Music/Art_Today/Involving_The_Audience/Art_And_Perception/Lightbox3.png') no-repeat;
+	width:100%;
+	height:100%;
+	top:0px;
+	left:0px;
+	position:absolute;
+	display:none;
+	z-index:15;
 }
